--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,4 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.11.11
 	xreef/EByte LoRa E220 library@^1.0.8
 	bodmer/TFT_eSPI@^2.5.43
+	adafruit/Adafruit ILI9341@^1.6.1
